# NeLivePushClient

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/livepushclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/sty/ne/livepushclient/: AudioChannel.java  CameraHelper.java  LivePusher.java  MainActivity.java  VideoChannel.java
app/src/main/java/com/sty/ne/livepushclient/util/: PermissionUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/ne/livepushclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
